packages/ibm-products-styles/src/components/BreadcrumbWithOverflow/_breadcrumb-with-overflow.scss
//
// Copyright IBM Corp. 2020, 2023
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

// Standard imports.
@use '@carbon/styles/scss/breakpoint' as *;
@use '@carbon/styles/scss/spacing' as *;
@use '@carbon/styles/scss/utilities';
@use '../../global/styles/project-settings' as c4p-settings;
@use '../../global/styles/mixins' as *;

$_block-class: #{c4p-settings.$pkg-prefix}--breadcrumb-with-overflow;

@include block-wrap($block-class: $_block-class) {
  &.#{$_block-class} {
    display: block;
  }

  .#{$_block-class}__space {
    position: relative;
    display: block;
    width: 100%;
    white-space: nowrap;
  }

  .#{$_block-class}__breadcrumb-container.#{$_block-class}__breadcrumb-container-with-items {
    display: inline-flex; // needed to register a width
    width: 100%;
  }

  .#{$_block-class}__breadcrumb-container
    .#{c4p-settings.$carbon-prefix}--breadcrumb {
    width: 100%;
    flex-wrap: nowrap;
    align-items: flex-start;
  }

  .#{$_block-class}__breadcrumb-container--hidden {
    // This breadcrumb container is used to measure the width of all displayable breadcrumbs
    @include measuring-container;
  }

  .#{$_block-class}__breadcrumb-back {
    display: none;
  }

  .#{$_block-class}__back__button.#{c4p-settings.$carbon-prefix}--btn {
    min-height: revert;
    padding: 0;
  }

  .#{$_block-class}__back__button.#{c4p-settings.$carbon-prefix}--btn--ghost:hover {
    background-color: inherit;
  }

  @include breakpoint-down(md) {
    .#{c4p-settings.$carbon-prefix}--breadcrumb-item {
      display: none;
    }

    .#{$_block-class}__breadcrumb-back,
    .#{c4p-settings.$carbon-prefix}--breadcrumb-item:last-child {
      display: inline-flex;
      vertical-align: middle;
    }

    .#{$_block-class}__displayed-breadcrumb:last-child {
      max-width: calc(100% - $spacing-07); // allow room for breadcrumb back
    }
  }

  .#{c4p-settings.$carbon-prefix}--breadcrumb-item:last-child {
    display: inline-flex; // flex instead of block due to spacing
  }

  .#{$_block-class}__displayed-breadcrumb:last-child {
    display: inline-flex; // flex instead of block due to spacing
    overflow: hidden;
  }

  .#{$_block-class}__displayed-breadcrumb:last-child
    .#{c4p-settings.$carbon-prefix}--link {
    display: inline-block;
    overflow: hidden;
    width: 100%;
    text-overflow: ellipsis;
  }
}

